// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test > The test prop works 1`] = `
<h1>
  My name is 
  samuel
</h1>
`;

exports[`test > test component renders correctly 1`] = `
<h1>
  My name is 
</h1>
`;
